--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backuniv",
+  "name": "backebjfl",
   "version": "1.0.0",
   "description": "fullstack web dev",
   "main": "server.js",
